--- a/index.html
+++ b/index.html
@@ -5,12 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Pendulum</title>
   </head>
-  <body id="screen" class="dark-theme">
+  <body id="screen" class="dark">
     <div style="position: absolute">
-      <div>
-        <label class="toggle theme">
+      <div class="button-grp">
+        <div class="btn btn-outline-warning" id="theme">
+          Light
+        </div>
+
+        <div class="btn btn-outline-warning" id="show">
+          Show
+        </div>
+        </div>
+        <div class="link-grp">
+        <div class="btn btn-outline-warning" id="github">
+          <a style="color: inherit; text-decoration:none" href="https://github.com/4D17Y4/Chaos">
+          4D17Y4
+          </a>
+        </div>
+        </div>
+        <!-- <label class="toggle theme">
           <input type="checkbox" />
           <span class="switch"></span>
           <p>Dark</p>
@@ -24,13 +40,12 @@
           <p>Show</p>
         </label>
       </div>
-      <!-- <label class="toggle gravity">
+      <label class="toggle gravity">
         <input type="checkbox" />
         <span class="switch"></span>
         <p>Down</p>
         <p>Rand</p>
       </label> -->
-    </div>
     <canvas id="canvas"></canvas>
   </body>
   <script src="scripts/bob.js"></script>
